:adhesive_bandage: fix unfitting scrollbar color

--- a/ui/raw/index.sass
+++ b/ui/raw/index.sass
@@ -16,8 +16,9 @@ html, body
 	color: $c-fg
 	font-family: $f-sans
 	margin: 0
-	padding: 0
 	overflow-x: hidden
+	padding: 0
+	scrollbar-color: lighten($c-bg, 20%) $c-bg !important
 
 input, button
 	font-family: $f-sans
